Added Zod for Schema validations, to make sure that the input data matches the required typeSchema, even at the path level

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
     // Enable latest features
     "lib": ["ESNext", "DOM"],
     "target": "ESNext",
