--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "react-bun-tanstack-expense-tracker",
-  "module": "index.ts",
+  "module": "server/index.ts",
   "type": "module",
+  "scripts": {
+    "start": "bun server/index.ts",
+    "dev": "bun --watch server/index.ts",
+    "test": "bun test"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
