--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
+    "@vitejs/plugin-react": "^4.3.0",
     "hono": "^4.3.11",
+    "vite": "^5.2.11",
     "zod": "^3.23.8"
   }
 }
