Dockerized and deployed the app intoo fly.io

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "bun test"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.7",
     "@types/bun": "latest"
   },
   "peerDependencies": {
