--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,7 +9,10 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      "@server/*": [
+        "../server/*"
+      ],
     },
 
     /* Bundler mode */
