--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-form": "^0.20.0",
     "@tanstack/react-query": "^5.39.0",
     "@tanstack/router-devtools": "^1.34.0",
     "@tanstack/router-vite-plugin": "^1.33.12",
