--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
+# Environment variables
+.env
+
 # Logs
 
 logs
