--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
+    "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
     "@vitejs/plugin-react": "^4.3.0",
     "hono": "^4.3.11",
     "vite": "^5.2.11",
