--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.7",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.22.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -17,8 +18,11 @@
   "dependencies": {
     "@hono/zod-validator": "^0.2.1",
     "@kinde-oss/kinde-typescript-sdk": "^2.9.1",
+    "@neondatabase/serverless": "^0.9.3",
     "@vitejs/plugin-react": "^4.3.0",
+    "drizzle-orm": "^0.31.0",
     "hono": "^4.3.11",
+    "postgres": "^3.4.4",
     "vite": "^5.2.11",
     "zod": "^3.23.8"
   }
